--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@types/jest": "^26.0.9",
+    "axios": "^0.19.2",
     "jest": "^26.3.0",
     "rollup": "^2.23.1",
     "rollup-plugin-sourcemaps": "^0.6.2",
